<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.mrt.mravi.mrt_blog1.Activities.MainActivityMD7">
    <!--
    <ImageButton
        android:src="@drawable/ic_person_add_black_24dp"
        android:layout_width="142dp"
        android:layout_height="122dp"
        android:id="@+id/profilePic"
        android:layout_marginBottom="24dp"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
   android:layout_marginLeft="150dp"
        />
-->

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:layout_width="320dp"
        android:layout_height="400dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            >


            <ImageButton
                android:src="@drawable/ic_person_add_black_24dp"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:id="@+id/profilePic"
                android:layout_marginBottom="24dp"
                android:layout_gravity="right"
                android:background="@android:color/transparent"

                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:layout_width="match_parent"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:hint="@string/Username"
                            android:textColor="#f0f7f4"
                            android:id="@+id/firstNameAct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.design.widget.TextInputLayout

                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:hint="college id"
                            android:textColor="#f0f7f4"

                            android:id="@+id/lastNameAct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.design.widget.TextInputLayout

                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:textColor="#f0f7f4"
                            android:hint="@string/email"
                            android:id="@+id/emailAct"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--new box-->

                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.design.widget.TextInputLayout

                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:textColor="#f0f7f4"
                            android:hint="@string/password"
                            android:id="@+id/passwordAct"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--end of edit text-->



                <Button
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/createAccountAct"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    android:textColor="#2fa881"
                    >
                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>

<!--module 2-->
<!--
<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"

    android:background="@drawable/materialbackground"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageButton android:src="@drawable/ic_person_outline_black_24dp"
            android:layout_width="142dp"
            android:layout_height="122dp"
            android:id="@+id/profilePic"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"

            />
-->
        <!-- Email Label -->

<!--
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp">
            <EditText  android:id="@+id/firstNameAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="first name" />
        </android.support.design.widget.TextInputLayout>
-->
        <!-- Password Label -->
<!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText    android:id="@+id/lastNameAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Last name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText       android:id="@+id/emailAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress"
                android:hint="email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText      android:id="@+id/passwordAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:hint="password"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccountAct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Login"
            android:background="@drawable/buttonstylepink"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccountAct1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Login through google"
            android:background="@drawable/buttonstylepink"
            />
    </LinearLayout>
</ScrollView>
-->

    <!--
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/materialbackground"
        tools:context="com.example.mravi.mrt_blog1.Activities.CreateAccountActivity">

        <EditText
            android:id="@+id/firstNameAct"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lastNameAct"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.961" />

        <EditText
            android:id="@+id/lastNameAct"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/emailAct" />





        <EditText
            android:id="@+id/emailAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="194dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/passwordAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAct"
            app:layout_constraintVertical_bias="0.227"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


        <Button
            android:id="@+id/createAccountAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordAct"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/profilePic"
            android:layout_width="142dp"
            android:layout_height="122dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/firstNameAct" />
    </android.support.constraint.ConstraintLayout>
    -->